# AutoMenu

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: example_2.cpp
src/: automenu.cpp  automenu.hpp
test/: test.cpp
